ecsdb/src/query/snapshots/ecsdb__query__ir__test__filter_expression_sql_query@And([EntityId(42), WithComponent("ecsdb::Test"), EntityId(42)]).sql_query().snap
---
source: src/query/ir.rs
description: "And([EntityId(42), WithComponent(\"ecsdb::Test\"), EntityId(42)]).sql_query()"
---
SqlFragment<ecsdb::query::ir::Select> {
    sql: "select distinct entity from components where (entity = :1 and entity in (select entity from components where component = :2) and entity = :3)",
    placeholders: [
        (
            ":1",
            <dyn ToSql>,
        ),
        (
            ":2",
            <dyn ToSql>,
        ),
        (
            ":3",
            <dyn ToSql>,
        ),
    ],
}
