ecsdb/src/query/snapshots/ecsdb__query__ir__test__filter_expression_where_clause@And([EntityId(42), WithComponent("ecsdb::Test"), EntityId(42)]).where_clause().snap
---
source: src/query/ir.rs
description: "And([EntityId(42), WithComponent(\"ecsdb::Test\"), EntityId(42)]).where_clause()"
---
SqlFragment<ecsdb::query::ir::Where> {
    sql: "(entity = :1 and entity in (select entity from components where component = :2) and entity = :3)",
    placeholders: [
        (
            ":1",
            <dyn ToSql>,
        ),
        (
            ":2",
            <dyn ToSql>,
        ),
        (
            ":3",
            <dyn ToSql>,
        ),
    ],
}
