ecsdb/src/query/snapshots/ecsdb__query__ir__test__simplify@WithComponentData("ecsdb::Test", Text("x")).simplify().snap
---
source: ecsdb/src/query/ir.rs
description: "WithComponentData(\"ecsdb::Test\", Text(\"x\")).simplify()"
---
WithComponentData(
    "ecsdb::Test",
    Text(
        "x",
    ),
)
