ecsdb/src/query/snapshots/ecsdb__query__ir__test__simplify@WithComponentDataRange { component: "ecsdb::Test", start: Integer(1), end: Integer(9) }.simplify().snap
---
source: ecsdb/src/query/ir.rs
description: "WithComponentDataRange { component: \"ecsdb::Test\", start: Integer(1), end: Integer(9) }.simplify()"
---
WithComponentDataRange {
    component: "ecsdb::Test",
    start: Integer(
        1,
    ),
    end: Integer(
        9,
    ),
}
