ecsdb/src/query/snapshots/ecsdb__query__ir__test__simplify@WithoutComponent("ecsdb::Test").simplify().snap
---
source: ecsdb/src/query/ir.rs
description: "WithoutComponent(\"ecsdb::Test\").simplify()"
---
WithoutComponent(
    "ecsdb::Test",
)
